tab layout bug fix

--- a/RemixMonsta/RemixMonsta/Style/desktop.css
+++ b/RemixMonsta/RemixMonsta/Style/desktop.css
@@ -179,7 +179,7 @@ body{
 	display:none;
 }
 .song-title {
-    width: 310px;
+    width: 300px;
     height: 22px;
     font-family: Open Sans;
     font-size: 16px;
@@ -409,6 +409,12 @@ body{
 	margin-right:15px;
 }
 
+.song .song-title{
+	position: absolute;
+    margin-top: 11px;
+	white-space: nowrap;
+}
+
 .song-number {
     padding-right: 0px;
     width: 25px;
@@ -475,7 +481,7 @@ body{
 
 
 .playlist-songs {
-    padding-top: 16px;
+        margin-top: 15px;
     height: 205px;
     overflow-y: scroll;
     width: 360px;
@@ -489,7 +495,10 @@ body{
     }
 
         .playlist-songs .song-info .song-title {
-            margin-left: 0px;
+                        margin-left: 0px;
+    width: 194px;
+    float: left;
+	overflow: visible;
         }
 
 .playlist-songs .song-info .album-covers {
@@ -499,13 +508,13 @@ body{
  }
 
 .info {
-        width: 247px;
+           float: left;
+    width: 75%;
 }
 
 .song-duration {
-     float: right;
-    margin-right: -75px;
-    margin-top: -25px
+float: right;
+    margin-right: 15px;
 }
 
 .stats {
@@ -513,8 +522,9 @@ body{
 }
 
     .stats .genre {
-        float: right;
-        margin-right: 10px;
+    float: right;
+    margin-right: 10px;
+    margin-top: 25px;
     }
 
 .subscribe {
@@ -539,7 +549,7 @@ body{
     margin-top: 18px;
     height: 36px;
     border-radius: 100px;
-    background-image: linear-gradient(99deg, #5300a4, #d025e2);
+    background:transparent;
     font-family: Open Sans;
     font-size: 16px;
     font-weight: bold;
@@ -555,7 +565,7 @@ body{
     border-radius: 100px;
     box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.5);
     border: solid 2px #ffffff;
-    background-image: linear-gradient(109deg, #5300a4, #d025e2);
+    background:transparent;
     width: 325px;
 	color: rgba(255, 255, 255, 0.6);
 }
